--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="kr.comnic.MyoungPum"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="4" android:versionName="1.1">
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+	
+	<uses-sdk android:minSdkVersion="7"></uses-sdk>
 
-
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application 
+	    android:label="@string/app_name" 
+	    android:icon="@drawable/icon1"
+	    android:theme="@android:style/Theme.NoTitleBar"
+    >
         <activity android:name=".MyoungPumActivity"
                   android:label="@string/app_name">
             <intent-filter>
@@ -14,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name="ListActivity"></activity>
+        <activity android:name="DetailActivity"></activity>
 
     </application>
 </manifest>
