--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="D:/Android/SDK/DaumAd@mSDK_forAndroid_v1.3_20110621/lib/MobileAdSDK-1.3.0.jar"/>
 	<classpathentry kind="lib" path="D:/Android/SDK/CaulySDK-V1.2.1/CaulySDK-V1.2.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
