--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="kr.comnic.MyoungPum"
-      android:versionName="1.3" android:versionCode="6">
+      android:versionName="1.3.1" android:versionCode="7">
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
@@ -13,9 +13,8 @@
 
     <application 
 	    android:label="@string/app_name" 
-	    android:icon="@drawable/icon1"
 	    android:theme="@android:style/Theme.NoTitleBar"
-    >
+    android:icon="@drawable/icon">
         <activity android:name=".MyoungPumActivity"
                   android:label="@string/app_name">
             <intent-filter>
